objects/Cancellation_Request__c.object
<CustomObject>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>if( 
or( 
ispickval( Outcome__c , "Churned"), 
ispickval( Outcome__c , "Saved with No Concessions"), 
ispickval( Outcome__c , "Saved with Hard Concessions"), 
ispickval( Outcome__c , "Saved with Soft Concessions"), 
ispickval( Outcome__c , "Saved with Upsell"), 
ispickval( Outcome__c , "Saved By Sales"), 
ispickval( Outcome__c , "Saved With Free Time"),
ispickval( Outcome__c , "Saved With Winback"),
ispickval( Outcome__c , "Cancelled"), 
ispickval( Outcome__c , "Saved - Bailout Pricing - Standard"), 
ispickval( Outcome__c , "Saved - Bailout Pricing - Custom"), 
ispickval( Outcome__c , "Saved with Discount"), 
ispickval( Outcome__c , "Saved with OBC Package"), 
ispickval( Outcome__c , "Downsold to LH Only"), 
ispickval( Outcome__c , "Downsold to LH+ProPack"), 
ispickval( Outcome__c , "Downsold to LH+ProPack+Mobile Manager"), 
ispickval( Outcome__c , "Ad Station Credit"), 
ispickval( Outcome__c, "Duplicate Retention Case") 
), 
true, 
false)</formula>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner_a_Queue__c</fullName>
        <formula>BEGINS(OwnerId, "00G")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner a Queue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <label>Issue ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH_360_ID__c</fullName>
        <formula>Account_Name__r.LH_360_ID__c</formula>
        <label>LH 360 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH_TORCHx_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to mark TORCHx and LH Cancel Forms as Escalated.</description>
        <label>LH/TORCHx Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_TP_Completed__c</fullName>
        <label>Last TP Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes- Green</fullName>
                </value>
                <value>
                    <fullName>Yes- Yellow</fullName>
                </value>
                <value>
                    <fullName>Yes - Red</fullName>
                </value>
                <value>
                    <fullName>No - Didn't Answer</fullName>
                </value>
                <value>
                    <fullName>Churned in first month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Title__c</fullName>
        <label>Name / Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Bill_Date__c</fullName>
        <inlineHelpText>if cancelled, leave blank</inlineHelpText>
        <label>Next Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Contact_Date__c</fullName>
        <label>Next Scheduled Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Save_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Save Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Phone_Number__c</fullName>
        <label>Office Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Cancel_Code__c</fullName>
        <label>Other Cancel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>.</description>
        <label>Cancel Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Save Mode</fullName>
                </value>
                <value>
                    <fullName>Churned</fullName>
                </value>
                <value>
                    <fullName>Saved with No Concessions</fullName>
                </value>
                <value>
                    <fullName>Saved with Hard Concessions</fullName>
                </value>
                <value>
                    <fullName>Saved with Soft Concessions</fullName>
                </value>
                <value>
                    <fullName>Saved with Upsell</fullName>
                </value>
                <value>
                    <fullName>Saved By Sales</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Duplicate Retention Case</fullName>
                </value>
                <value>
                    <fullName>Saved - Bailout Pricing - Standard</fullName>
                </value>
                <value>
                    <fullName>Saved - Bailout Pricing - Custom</fullName>
                </value>
                <value>
                    <fullName>Saved with Discount</fullName>
                </value>
                <value>
                    <fullName>Saved with OBC Package</fullName>
                </value>
                <value>
                    <fullName>Downsold to LH Only</fullName>
                </value>
                <value>
                    <fullName>Downsold to LH+ProPack</fullName>
                </value>
                <value>
                    <fullName>Downsold to LH+ProPack+Mobile Manager</fullName>
                </value>
                <value>
                    <fullName>Ad Station Credit</fullName>
                </value>
                <value>
                    <fullName>Delete Case</fullName>
                </value>
                <value>
                    <fullName>Saved With Free Time</fullName>
                </value>
                <value>
                    <fullName>Saved with Winback</fullName>
                </value>
                <value>
                    <fullName>Dollar Sync Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Manger__c</fullName>
        <formula>Owner:User.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Launch_Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Launch/Install Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Change2__c</fullName>
        <label>Price Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Change_Detail__c</fullName>
        <label>Price Change Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Tilted_Down__c</fullName>
        <label>Price Tilted Down</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Tilted_Up__c</fullName>
        <label>Price Tilted Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Change2__c</fullName>
        <label>Product Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Change_Detail__c</fullName>
        <label>Product Change Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reduced_Contract_Term2__c</fullName>
        <label>Reduced Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reduced_Contract_Term_Details__c</fullName>
        <label>Reduced Contract Term Details</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduced_Contract_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reduced Contract Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund2__c</fullName>
        <label>Refund</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not Requested</fullName>
                </value>
                <value>
                    <fullName>Requested and Approved</fullName>
                </value>
                <value>
                    <fullName>Requested and Denied</fullName>
                </value>
                <value>
                    <fullName>Requested, Countered and Accepted</fullName>
                </value>
                <value>
                    <fullName>Requested, Countered and Denied</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Amount_Requested__c</fullName>
        <label>Refund Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount Approved</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cancellation_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Detail__c</fullName>
        <label>Refund Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Removed_Cancellation_Dates__c</fullName>
        <label>Removed Cancellation Dates</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requesting_to_Cancel__c</fullName>
        <label>Requesting to Cancel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ads</fullName>
                </value>
                <value>
                    <fullName>Lighthouse + Ads</fullName>
                </value>
                <value>
                    <fullName>Lighthouse + ProPack</fullName>
                </value>
                <value>
                    <fullName>Lighthouse + Pro Pack + Mobile Manager</fullName>
                </value>
                <value>
                    <fullName>Lighthouse + Pro Pack + Mobile Manager + Welcome Station</fullName>
                </value>
                <value>
                    <fullName>Lighthouse + ProPack + Welcome Station</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Only</fullName>
                </value>
                <value>
                    <fullName>ProPack + Welcome Station</fullName>
                </value>
                <value>
                    <fullName>ProPack Only</fullName>
                </value>
                <value>
                    <fullName>Welcome Station Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rerouted_Funds_Detail__c</fullName>
        <label>Rerouted Funds Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rerouted_Funds_Same_Products__c</fullName>
        <label>Rerouted Funds (Same Products)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rerouted_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rerouted Funds (Same Products)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retention_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retention Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cancellation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retention_Path_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retention Path Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Lost_Month__c</fullName>
        <label>Revenue Lost/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Saved__c</fullName>
        <formula>Future_Monthly_Revenue__c /  Current_Monthly_Revenue__c</formula>
        <label>% Revenue Saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEM_Optimization2__c</fullName>
        <label>SEM Optimization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEM_Optimization_Detail__c</fullName>
        <label>SEM Optimization Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEM_Optimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEM Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_Optimization2__c</fullName>
        <label>SEO Optimization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEO_Optimization_Detail__c</fullName>
        <label>SEO Optimization Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Optimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEO Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Save_Action__c</fullName>
        <description>Used by WBN.  Notes to record actions to save an account.</description>
        <label>Save Action</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Adoption_Call_Details__c</fullName>
        <label>Scheduled Adoption Call Details</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Adoption_Call__c</fullName>
        <label>Scheduled Adoption Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Cancel_Code_Details__c</fullName>
        <inlineHelpText>This is the second cancellation code details.</inlineHelpText>
        <label>Second Cancel Code Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Second_Cancel_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ability to Customize</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Better Customer Service</fullName>
                </value>
                <value>
                    <fullName>Better Features</fullName>
                </value>
                <value>
                    <fullName>Better Product</fullName>
                </value>
                <value>
                    <fullName>Better ROI</fullName>
                </value>
                <value>
                    <fullName>Better Website</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Buyer's Remorse</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Centermark</fullName>
                </value>
                <value>
                    <fullName>Cheaper Competitor</fullName>
                </value>
                <value>
                    <fullName>Closing Business</fullName>
                </value>
                <value>
                    <fullName>Colors</fullName>
                </value>
                <value>
                    <fullName>Compared to Competitor</fullName>
                </value>
                <value>
                    <fullName>Conflicting Paid Search Campaign</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Contacts Feature</fullName>
                </value>
                <value>
                    <fullName>Contract Length Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Controlling Party</fullName>
                </value>
                <value>
                    <fullName>Corporate Billing Decline</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>CRM Too Much Work</fullName>
                </value>
                <value>
                    <fullName>Customizations</fullName>
                </value>
                <value>
                    <fullName>Custom Landing Pages</fullName>
                </value>
                <value>
                    <fullName>Cutting Budget Overall</fullName>
                </value>
                <value>
                    <fullName>Data Feed Issue</fullName>
                </value>
                <value>
                    <fullName>Denied Ts &amp; Cs</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Desktop Dashboard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Cancel_Code_Notes__c</fullName>
        <label>Second Cancel Code Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Second_Cancel_Code__c</fullName>
        <inlineHelpText>This is the second cancellation code.</inlineHelpText>
        <label>Second Cancel Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Acceptance</fullName>
                </value>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Current Features are Limited</fullName>
                </value>
                <value>
                    <fullName>Internal System Use</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Sales Expectations</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Missing Features</fullName>
                </value>
                <value>
                    <fullName>Unhappy with Website</fullName>
                </value>
                <value>
                    <fullName>Software Too Complicated</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Client: Website Info</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>No WBN Brand Association</fullName>
                </value>
                <value>
                    <fullName>Billing Decline</fullName>
                </value>
                <value>
                    <fullName>Corporate Mandate Departure</fullName>
                </value>
                <value>
                    <fullName>Dashboard Functionality</fullName>
                </value>
                <value>
                    <fullName>Setup Errors</fullName>
                </value>
                <value>
                    <fullName>Website Expectations</fullName>
                </value>
                <value>
                    <fullName>Product Expectations</fullName>
                </value>
                <value>
                    <fullName>Features Limited (WBN)</fullName>
                </value>
                <value>
                    <fullName>Product Performance</fullName>
                </value>
                <value>
                    <fullName>Reputation Concern</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>Account_Name__r.Secondary_Segments__c</formula>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Confirmation_to_Client__c</fullName>
        <label>Send Confirmation to Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_to_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected to indicate when a TORCHx account is returned to sales to attempt save.</description>
        <label>Sent to Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account_Name__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Case_to_turn_off_Transports__c</fullName>
        <label>Submitted Case To Turn Off Transports</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_QA_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted QA Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Switching_Systems__c</fullName>
        <label>Switching Systems?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Switching_To__c</fullName>
        <label>System Switching To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Switching_Systems__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All Data Mobile</fullName>
                </value>
                <value>
                    <fullName>Appointmentreminder.org</fullName>
                </value>
                <value>
                    <fullName>Auto Remind</fullName>
                </value>
                <value>
                    <fullName>Autoshop Solutions</fullName>
                </value>
                <value>
                    <fullName>Auto Vitals/Napa DVI</fullName>
                </value>
                <value>
                    <fullName>Benco</fullName>
                </value>
                <value>
                    <fullName>BoltOn</fullName>
                </value>
                <value>
                    <fullName>Booker</fullName>
                </value>
                <value>
                    <fullName>Breezeworks</fullName>
                </value>
                <value>
                    <fullName>Business Promotion</fullName>
                </value>
                <value>
                    <fullName>ChiroTouch</fullName>
                </value>
                <value>
                    <fullName>ClearChoice</fullName>
                </value>
                <value>
                    <fullName>Clear Mechanic</fullName>
                </value>
                <value>
                    <fullName>Curve</fullName>
                </value>
                <value>
                    <fullName>Demandforce</fullName>
                </value>
                <value>
                    <fullName>Dentrix eCentral / eServices</fullName>
                </value>
                <value>
                    <fullName>DoctorBase</fullName>
                </value>
                <value>
                    <fullName>Dolphin</fullName>
                </value>
                <value>
                    <fullName>Eaglesoft eServices</fullName>
                </value>
                <value>
                    <fullName>Easy Dental</fullName>
                </value>
                <value>
                    <fullName>EasyMarkit</fullName>
                </value>
                <value>
                    <fullName>EON TPS</fullName>
                </value>
                <value>
                    <fullName>FieldPro Max</fullName>
                </value>
                <value>
                    <fullName>First Pacific Pro</fullName>
                </value>
                <value>
                    <fullName>Futuredontics (Patient Activator/1800Dentist)</fullName>
                </value>
                <value>
                    <fullName>Jobber</fullName>
                </value>
                <value>
                    <fullName>KickServ</fullName>
                </value>
                <value>
                    <fullName>KuKui</fullName>
                </value>
                <value>
                    <fullName>LawnPro</fullName>
                </value>
                <value>
                    <fullName>Legworks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>LH &amp; TORCHx Cancel Request</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Chiro</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>TORCHx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upsell_Details__c</fullName>
        <label>Upsell Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Upsold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upsold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Manager__c</fullName>
        <formula>CreatedBy.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verify_Product_Changes_Status_in_YL__c</fullName>
        <label>Verify Changes/Status in YL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>